@@ -954,14 +954,17 @@ ALTER TABLE `gibbonStaffDuty` ADD `type` VARCHAR(40) NOT NULL DEFAULT 'Other' AF
 INSERT INTO `gibbonAction` (`gibbonModuleID`, `name`, `precedence`, `category`, `description`, `helpURL`, `URLList`, `entryURL`, `entrySidebar`, `menuShow`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES((SELECT gibbonModuleID FROM gibbonModule WHERE name='Activities'), 'Explore Activities_registerByParent', 2, 'Activities', 'Allows parents to view activities and register for their children', NULL, 'explore.php,explore_category.php,explore_activity.php,explore_activity_signUp.php', 'explore.php', 'Y', 'Y', 'N', 'N', 'N', 'Y', 'N', 'N', 'N', 'Y', 'N');end
 ALTER TABLE `gibbonActivityCategory` ADD `gibbonYearGroupIDParentRegister` VARCHAR(255) NULL AFTER `accessEnrolmentDate`;end
 INSERT INTO `gibbonModule` (`gibbonModuleID`, `name`, `description`, `entryURL`, `type`, `active`, `category`, `version`, `author`, `url`) VALUES (NULL, 'Alerts', 'View, create and manage alerts for students', 'studentAlerts_manage.php', 'Core', 'Y', 'Pastoral', '', 'Gibbon Foundation', 'https://gibbonedu.org');end
-CREATE TABLE `gibbonAlert` (`gibbonAlertID` INT(12) UNSIGNED ZEROFILL NOT NULL AUTO_INCREMENT, `gibbonSchoolYearID` INT(3) NOT NULL, `gibbonPersonID` INT(10) NOT NULL, `gibbonAlertLevelID` INT(3) NOT NULL, `context` ENUM('Automatic','Manual') NOT NULL DEFAULT 'Automatic', `type` VARCHAR(60) NOT NULL, `status` ENUM('Pending','Approved','Declined') NOT NULL DEFAULT 'Pending', `level` VARCHAR(60) NOT NULL, `dateStart` DATE NULL, `dateEnd` DATE NULL, `comment` TEXT NULL, `timestampCreated` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, `gibbonPersonIDCreator` INT(10) UNSIGNED ZEROFILL NOT NULL, `gibbonPersonIDApproval` int(10) UNSIGNED ZEROFILL DEFAULT NULL, `notesApproval` TEXT NULL, `timestampApproval` timestamp NULL DEFAULT NULL, PRIMARY KEY (`gibbonAlertID`)) ENGINE = InnoDB CHARSET=utf8;end
-INSERT INTO `gibbonAction` (`gibbonActionID`, `gibbonModuleID`, `name`, `precedence`, `category`, `description`, `URLList`, `entryURL`, `entrySidebar`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES (NULL, (SELECT gibbonModuleID FROM gibbonModule WHERE name='Alerts'), 'Manage Student Alerts_my', 0, 'Manage Alerts', 'Manage, create and edit manual alerts for students.', 'studentAlerts_manage.php,studentAlerts_add.php, studentAlerts_edit.php,studentAlerts_manage_view.php','studentAlerts_manage.php', 'Y', 'Y', 'Y', 'N', 'N', 'N', 'Y', 'N', 'N', 'N');end
-INSERT INTO `gibbonAction` (`gibbonActionID`, `gibbonModuleID`, `name`, `precedence`, `category`, `description`, `URLList`, `entryURL`, `entrySidebar`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES (NULL, (SELECT gibbonModuleID FROM gibbonModule WHERE name='Alerts'), 'Manage Student Alerts_all', 1, 'Manage Alerts', 'Manage, create and edit all manual alerts for students and also approve any alert.', 'studentAlerts_manage.php,studentAlerts_add.php,studentAlerts_edit.php,studentAlerts_manage_approval.php,studentAlerts_manage_view.php','studentAlerts_manage.php','Y', 'Y', 'N', 'N', 'N', 'N', 'Y', 'N', 'N', 'N');end
+CREATE TABLE `gibbonAlert` (`gibbonAlertID` INT(12) UNSIGNED ZEROFILL NOT NULL AUTO_INCREMENT, `gibbonSchoolYearID` INT(3) UNSIGNED ZEROFILL NOT NULL, `gibbonPersonID` INT(10) UNSIGNED ZEROFILL NOT NULL, `gibbonAlertLevelID` INT(3) UNSIGNED ZEROFILL NOT NULL, `context` ENUM('Automatic','Manual') NOT NULL DEFAULT 'Automatic', `type` VARCHAR(60) NOT NULL, `status` ENUM('Pending','Approved','Declined') NOT NULL DEFAULT 'Pending', `level` VARCHAR(60) NOT NULL, `dateStart` DATE NULL, `dateEnd` DATE NULL, `comment` TEXT NULL, `timestampCreated` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, `gibbonPersonIDCreator` INT(10) UNSIGNED ZEROFILL NOT NULL, `gibbonPersonIDApproval` int(10) UNSIGNED ZEROFILL DEFAULT NULL, `notesApproval` TEXT NULL, `timestampApproval` timestamp NULL DEFAULT NULL, PRIMARY KEY (`gibbonAlertID`)) ENGINE = InnoDB CHARSET=utf8;end
+INSERT INTO `gibbonAction` (`gibbonActionID`, `gibbonModuleID`, `name`, `precedence`, `category`, `description`, `URLList`, `entryURL`, `entrySidebar`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES (NULL, (SELECT gibbonModuleID FROM gibbonModule WHERE name='Alerts'), 'Manage Student Alerts_my', 0, 'Alerts', 'Manage, create and edit manual alerts for students.', 'studentAlerts_manage.php,studentAlerts_add.php, studentAlerts_edit.php,studentAlerts_manage_view.php','studentAlerts_manage.php', 'Y', 'Y', 'Y', 'N', 'N', 'N', 'Y', 'N', 'N', 'N');end
+INSERT INTO `gibbonAction` (`gibbonActionID`, `gibbonModuleID`, `name`, `precedence`, `category`, `description`, `URLList`, `entryURL`, `entrySidebar`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES (NULL, (SELECT gibbonModuleID FROM gibbonModule WHERE name='Alerts'), 'Manage Student Alerts_all', 1, 'Alerts', 'Manage, create and edit all manual alerts for students and also approve any alert.', 'studentAlerts_manage.php,studentAlerts_add.php,studentAlerts_edit.php,studentAlerts_manage_approval.php,studentAlerts_manage_view.php','studentAlerts_manage.php','Y', 'Y', 'N', 'N', 'N', 'N', 'Y', 'N', 'N', 'N');end
 INSERT INTO `gibbonPermission` (`gibbonRoleID` ,`gibbonActionID`) VALUES (001, (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Alerts' AND gibbonAction.name='Manage Student Alerts_all'));end
 INSERT INTO `gibbonPermission` (`gibbonRoleID` ,`gibbonActionID`) VALUES (001, (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Alerts' AND gibbonAction.name='Manage Student Alerts_my'));end
 INSERT INTO `gibbonPermission` (`gibbonRoleID` ,`gibbonActionID`) VALUES (002, (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Alerts' AND gibbonAction.name='Manage Student Alerts_my'));end
 UPDATE `gibbonAction` SET name='Manage Alert Types and Levels' WHERE name='Manage Alert Levels' AND gibbonModuleID=(SELECT gibbonModuleID FROM gibbonModule WHERE name='School Admin');end
-CREATE TABLE `gibbonAlertType` (`gibbonAlertTypeID` INT(12) UNSIGNED ZEROFILL NOT NULL AUTO_INCREMENT, `name` VARCHAR(60) NOT NULL, `tag` VARCHAR(5) NULL, `active` ENUM('Y','N') NOT NULL DEFAULT 'Y', `color` VARCHAR(10) NULL COMMENT 'RGB Hex, leading #', `colorBG` VARCHAR(10) NULL COMMENT 'RGB Hex, leading #', `description` TEXT NULL, `gibbonPersonIDCreator` INT(10) UNSIGNED ZEROFILL NOT NULL, `timestampCreated` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, PRIMARY KEY (`gibbonAlertTypeID`)) ENGINE = InnoDB CHARSET=utf8;end
+CREATE TABLE `gibbonAlertType` (`gibbonAlertTypeID` INT(6) UNSIGNED ZEROFILL NOT NULL AUTO_INCREMENT, `name` VARCHAR(60) NOT NULL, `tag` VARCHAR(5) NULL, `active` ENUM('Y','N') NOT NULL DEFAULT 'Y', `color` VARCHAR(10) NULL COMMENT 'RGB Hex, leading #', `colorBG` VARCHAR(10) NULL COMMENT 'RGB Hex, leading #', `description` TEXT NULL, `gibbonPersonIDCreator` INT(10) UNSIGNED ZEROFILL NOT NULL, `timestampCreated` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP, PRIMARY KEY (`gibbonAlertTypeID`)) ENGINE = InnoDB CHARSET=utf8;end
 UPDATE `gibbonSetting` SET value=REPLACE(value,'Admin,','Admin,Pastoral,') WHERE name='mainMenuCategoryOrder';end
 UPDATE `gibbonModule` SET category='Pastoral' WHERE name='Behaviour' OR name='Attendance' OR name='Individual Needs';end
+ALTER TABLE `gibbonAlertType` ADD `type` enum('Core','Additional') NOT NULL DEFAULT 'Additional' AFTER `active`;end
+ALTER TABLE `gibbonAlertType` ADD `sequenceNumber` INT(6) NOT NULL AFTER `description`;end
+ALTER TABLE `gibbonAlert` ADD `gibbonAlertTypeID` INT(6) UNSIGNED ZEROFILL NOT NULL AFTER `gibbonAlertLevelID`;end
 ";
